--- a/app/views/harvests/new.html.erb
+++ b/app/views/harvests/new.html.erb
@@ -3,7 +3,7 @@
 <p> Automatically format an article's <b>bold</b> and <i>italic</i> words in the markdown language used in the Byliner Admin. (<%= mail_to("jj5201@gmail.com", "Report Bugs", :subject => "Markdown App Bug(s)") %>) </p> 
 
 
-<div id="ocr" style="height:500px;width:550px;float:left;">
+<div id="ocr" style="height:500px;width:550px;float:left; padding-right:100px">
 	<h2>For .rtf files: </h2>
 	<ol>
 		<li>In gmail, scroll down to the appropriate file attachment & <b>Click "View as HTML"</b></li>
@@ -31,7 +31,7 @@
 	<% end %>
 </div>
 
-<div id="website" style="height:500px;width:500px;float:right;" >
+<div id="website" style="height:500px;width:500px;float:left;" >
 	<h2>From a Website: </h2>
 	<ol>
 		<li>Navigate to the Print Page of the article, <b>Right Click & Select "View Source" </b></li>
