--- a/app/views/harvests/new.html.erb
+++ b/app/views/harvests/new.html.erb
@@ -1,46 +1,22 @@
-<h1>Quick Markdown</h1>
+<h1>A Formatting App for Byliner</h1>
 
-<p> Automatically format an article's <b>bold</b> and <i>italic</i> words in the markdown language used in the Byliner Admin. (<%= mail_to("jj5201@gmail.com", "Report Bugs", :subject => "Markdown App Bug(s)") %>) </p> 
-
-
+<p> Automatically format an article's <b>bold</b> and <i>italic</i> words in the markdown language used in the Byliner Admin. <br> (Now clears up common OCR mistakes, too!) <%= mail_to("jj5201@gmail.com", "Report Bugs", :subject => "Markdown App Bug(s)") %></p> 
 
 
-<div id="website" style="height:500px;width:500px; float:left; padding-right:100px" >
+
+
+<div id="website" style="height:600px;width:650px; float:left; padding-right:100px" >
 	<h2>From a Website: </h2>
 	<ol>
 		<li>Navigate to the Print Page of the article, <b>Right Click & Select "View Source" </b></li>
 		<li>In the Source View, <b>Select All & Copy </b></li>
 		<li><b>Paste</b> into the box below &<b> Click Submit</b>!</li>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
 	</ol> 
-
-	<%= form_for(@harvest) do |f| %>
-	 
-
-		<div class="field">
-
-			<%= f.text_area :raw_text, size: "70x15", placeholder: "Paste the source code here..." %>
-
-		</div>
-
-
-	<%= f.submit "Submit", class: "btn btn-large btn-primary" %>
-	<% end %>
-</div>
-
-<div id="ocr" style="height:500px;width:600px;float:right ">
-	<h2>For .rtf files: </h2>
-	<p>(Directions written using <%= link_to("Libre Office", "http://www.libreoffice.org/", :target => "_blank") %>)
+	<h2>From OCR: </h2>
 	<ol>
-		<li>In gmail, scroll down to the appropriate file attachment & <b>Click "View as HTML"</b></li>
-		<li>In the html view, <b>Select All & Copy </b>
-		<li><b>Paste</b> into a <u>word processor</u></li> and <b>Save with a .html extensension</b><br></li>
-		<li>Open your new .html file in a <u>text editor</u>, <b>Select All & Copy </b></li>
-		<li><b>Paste</b> into the box below & <b>Click Submit</b>!</li>
+		<li>Open the .html OCR file in your favorite text editor</li>
+		<li><b>Copy</b> the raw HTML, <b>Paste</b> into the box below &<b> Click Submit</b>!</li>
+		
 	</ol> 
 
 	<%= form_for(@harvest) do |f| %>
@@ -48,10 +24,9 @@
 
 		<div class="field">
 
-			<%= f.text_area :raw_text, size: "70x15", placeholder: "Paste the source code here..." %>
+			<%= f.text_area :raw_text, size: "75x18", placeholder: "Paste the source code here..." %>
 
 		</div>
-
 
 
 	<%= f.submit "Submit", class: "btn btn-large btn-primary" %>
