fixed box sizing

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,7 +43,7 @@
 
 	<p> Step 2: In the Print Page View, Right Click and select "View Page Source" </p>
 
-	<p> Step 3: In Page Source, Copy all, Paste it below, and Click Submit: </p>
+	<p> Step 3: In Page Source, Copy all, Paste it below, and Click Submit: </p><br>
 
 	
 
