format tips page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,3 +39,21 @@
 
 
 
+.tips
+ {
+ float: left;
+ width: 350px;
+ height: 450px;
+ border-style:solid;
+ border-color:#E8E8E8;
+ padding-left:0px;
+ padding-right:30px;
+ padding-bottom:0px;
+ margin-bottom: 50px;
+
+
+}
+
+
+
+
