--- a/app/views/static_pages/tips.html.erb
+++ b/app/views/static_pages/tips.html.erb
@@ -1,12 +1,13 @@
 <h2> Tip for selecting html from a website with no print page: </h2>
 <p>*Note some knowledge of html is needed*</p>
-
+<div class="tips">
 <ul>
-	<li>Take a Look at the first sentence of the article.  Copy this text making sure to leave out any CAPITAL case letters</li>
-	<li>Now Right Click, "View Page Source"</li>
-	<li>In the Source View, Do a search (crtl+f or apple symbol+f) and paste in the text you copied from the article.  </li>
-	<li>Once you find the first sentence, Start Copying the text of the article</li>
-	<li>If you are comfortable with html, feel free to leave out any uncessary code for pictures, advertisements, etc. </li>
+	<li>Take a Look at the first sentence of the article.  Copy this text making sure to leave out any CAPITAL case letters</li><br>
+	<li>Now Right Click, "View Page Source"</li><br>
+	<li>In the Source View, Do a search (crtl+f or apple symbol+f) and paste in the text you copied from the article.  </li><br>
+	<li>Once you find the first sentence, Start Copying the text of the article</li><br>
+	<li>If you are comfortable with html, feel free to leave out any uncessary code for pictures, advertisements, etc. </li><br>
 	<li>Once you have the article text copied, paste it into Web Box on the Home Page
  </li>
 </ul>
+</div>
