--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,12 +43,13 @@
  {
  float: left;
  width: 350px;
- height: 450px;
+ height: 500px;
  border-style:solid;
  border-color:#E8E8E8;
  padding-left:0px;
  padding-right:30px;
  padding-bottom:0px;
+ margin-right: 50px;
  margin-bottom: 50px;
 
 
