--- a/app/views/static_pages/tips.html.erb
+++ b/app/views/static_pages/tips.html.erb
@@ -1,6 +1,8 @@
-<h2> Tip for selecting html from a website with no print page: </h2>
-<p>*Note some knowledge of html is needed*</p>
+<h2> Tips: </h2>
+
 <div class="tips">
+<h2>Website Harvest w/out Print Page</h2>
+<p>*Note some knowledge of html is needed*</p>
 <ul>
 	<li>Take a Look at the first sentence of the article.  Copy this text making sure to leave out any CAPITAL case letters</li><br>
 	<li>Now Right Click, "View Page Source"</li><br>
@@ -9,5 +11,16 @@
 	<li>If you are comfortable with html, feel free to leave out any uncessary code for pictures, advertisements, etc. </li><br>
 	<li>Once you have the article text copied, paste it into Web Box on the Home Page
  </li>
+</ul>
+</div>
+<div class="tips">
+<h2>Editing after Harvest</h2>
+<ul>
+	<li>Do a search for all quotations in your document and make sure they all designate dialoge, not titles.   </li><br>
+	<li>Make sure you highlight mispelled words</li><br>
+	<li></li><br>
+	<li></li><br>
+	<li></li><br>
+	<li></li>
 </ul>
 </div>
